Fixed nav links for light with google login and menu items dark for readability

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -8,6 +8,7 @@
     color: rgba(242, 240, 237);
 }
 
-a {
+#loginlink{
     color: rgba(242, 240, 237);
 }
+
